test/end-to-end/compile-errors/extern-redundant.crow
main void() trusted
	info log if extern linux
		if extern linux
			"a"
		else
			"b"
	else
		# Using the same value to keep test output consistent
		"a"
